--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='no-js' lang='en' ng-app="prDashboard">
+<html class='no-js' lang='en' ng-app="sgDashboard">
   <head>
     <meta charset='utf-8'>
     <title>Home</title>
@@ -9,14 +9,19 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js'></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="dashboard-controller.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/components/dashboard/dashboard-controller.js"></script>
+    <script type="text/javascript" src="js/components/dashboard/dashboard-edit-controller.js"></script>
+    <script type="text/javascript" src="js/services/persistent-factory.js"></script>
+    <script type="text/javascript" src="js/services/product-service.js"></script>
+    <script src="//cdn.jsdelivr.net/pouchdb/3.6.0/pouchdb.min.js"></script>
+
   </head>
-  <body class='home marketing' ng-controller="DashboardCtrl">
+  <body class='home marketing'>
+    <a ui-sref="home">Home</a>
+    <a ui-sref="edit">Edit</a>
     <div ui-view>
     </div>
-    <a ui-sref="home">State 1</a>
-    <a ui-sref="edit">State 2</a>
     </div>
   </body>
 </html>
