--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- Modernizr -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js'></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js'></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
@@ -14,14 +16,24 @@
     <script type="text/javascript" src="js/components/dashboard/dashboard-edit-controller.js"></script>
     <script type="text/javascript" src="js/services/persistent-factory.js"></script>
     <script type="text/javascript" src="js/services/product-service.js"></script>
-    <script src="//cdn.jsdelivr.net/pouchdb/3.6.0/pouchdb.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/pouchdb/3.6.0/pouchdb.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  
   </head>
-  <body class='home marketing'>
-    <a ui-sref="home">Home</a>
-    <a ui-sref="edit">Edit</a>
+  <body>
+    <div class="container" ng-controller="DashboardCtrl">
+      <div id="content">
+        <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+            <li ng-click="onClickTab('home')" ng-class="{active:isActiveTab('home')}">
+              <a ui-sref="home" data-toggle="tab">Home</a>
+            </li>
+            <li ng-click="onClickTab('edit')" ng-class="{active:isActiveTab('edit')}">
+              <a ui-sref="edit" data-toggle="tab">Edit</a>
+            </li>          
+        </ul>      
+      </div>
+    </div>
     <div ui-view>
-    </div>
-    </div>
+    </div>    
   </body>
 </html>
