--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Home</title>
     <!-- Optimized mobile viewport -->
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-    <!-- Modernizr -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js'></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js'></script>
@@ -21,7 +19,7 @@
   
   </head>
   <body>
-    <div class="container" ng-controller="DashboardCtrl">
+    <div class="container">
       <div id="content">
         <ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
             <li ng-click="onClickTab('home')" ng-class="{active:isActiveTab('home')}">
@@ -32,8 +30,9 @@
             </li>          
         </ul>      
       </div>
+      <div ui-view>
+      </div>    
     </div>
-    <div ui-view>
-    </div>    
+    
   </body>
 </html>
