--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset='utf-8'>
     <title>Home</title>
-    <!-- Optimized mobile viewport -->
-    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <style>
+      .open {
+        display: block;
+      }
+
+      .closed {
+        display: none;
+      }
+    </style>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js'></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
@@ -14,9 +21,9 @@
     <script type="text/javascript" src="js/components/dashboard/dashboard-edit-controller.js"></script>
     <script type="text/javascript" src="js/services/persistent-factory.js"></script>
     <script type="text/javascript" src="js/services/product-service.js"></script>
+    <script type="text/javascript" src="js/services/request-service.js"></script>
     <script src="https://cdn.jsdelivr.net/pouchdb/3.6.0/pouchdb.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  
   </head>
   <body>
     <div class="container">
@@ -27,12 +34,12 @@
             </li>
             <li ng-click="onClickTab('edit')" ng-class="{active:isActiveTab('edit')}">
               <a ui-sref="edit" data-toggle="tab">Edit</a>
-            </li>          
-        </ul>      
+            </li>
+        </ul>
       </div>
       <div ui-view>
-      </div>    
+      </div>
     </div>
-    
+
   </body>
 </html>
