--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="js/services/persistent-factory.js"></script>
     <script type="text/javascript" src="js/services/product-service.js"></script>
     <script type="text/javascript" src="js/services/request-service.js"></script>
+    <script type="text/javascript" src="js/config/message-constant.js"></script>
     <script src="https://cdn.jsdelivr.net/pouchdb/3.6.0/pouchdb.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </head>
