--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
         display: none;
       }
     </style>
-    <script data-main="js/main" src="js/lib/require.js"></script>
-
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js'></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/components/dashboard/dashboard-controller.js"></script>
     <script type="text/javascript" src="js/components/dashboard/dashboard-edit-controller.js"></script>
     <script type="text/javascript" src="js/services/persistent-factory.js"></script>
     <script type="text/javascript" src="js/services/product-service.js"></script>
     <script type="text/javascript" src="js/services/request-service.js"></script>
     <script type="text/javascript" src="js/config/message-constant.js"></script>
-    
-    
+    <script src="https://cdn.jsdelivr.net/pouchdb/3.6.0/pouchdb.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </head>
   <body>
     <div class="container">
